Fixes special character input, scoring, variable names, and ui board math
Special characters now are shown to the player and treated like spaces
Initial zoom out animation fixed to be more accurate
All math associated with board size, location, etc heavily cleaned up
Variable names cleaned up to clerify use.

--- a/demo.yaml
+++ b/demo.yaml
@@ -39,7 +39,7 @@ qset:
             answers:
               -
                 value: 100
-                text: The Taj-Mahals
+                text: The Taj-Mahal
             options:
               y: 17
               x: 5
