fix spelling error in new question

--- a/demo.yaml
+++ b/demo.yaml
@@ -34,7 +34,7 @@ qset:
               -
                 text: >
                   A white marble mausoleum commissioned in 1632
-                  by an emporor to house the tomb of his favorite
+                  by an emperor to house the tomb of his favorite
                   wife of three.
             answers:
               -
