--- a/src/install.yaml
+++ b/src/install.yaml
@@ -14,6 +14,8 @@ general:
 files:
   creator: creator.html
   player: player.html
+  creator_guide: _helper-docs/src/creatorGuide.html
+  player_guide: _helper-docs/src/playerGuide.html
   flash_version: 10
 score:
   is_scorable: Yes
