Removed karma tests, added deps, added player and creator test files

--- a/package.json
+++ b/package.json
@@ -18,7 +18,22 @@
     "angular": "1.6.9",
     "angular-mocks": "1.6.9",
     "jest": "^23.6.0",
-    "jest-coffee-preprocessor": "^1.0.0"
+    "jest-coffee-preprocessor": "^1.0.0",
+    "jquery-1x":"^1.12.1",
+    "materia-server-client-assets":"^1.1.0"
+  },
+  "jest": {
+    "verbose": true,
+    "transform": {
+      "^.+\\.coffee$": "<rootDir>/node_modules/jest-coffee-preprocessor/index.js"
+    },
+    "moduleFileExtensions": [
+      "coffee",
+      "js"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{js,coffee}"
+    ]
   },
   "license": "AGPL-3.0",
   "description": "Enigma is a Jeopardy-like study and quiz widget for use in Materia.",
