--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "angular-mocks": "1.6.9",
     "jest": "^23.6.0",
     "jest-coffee-preprocessor": "^1.0.0",
-    "jquery-1x":"^1.12.1",
-    "materia-server-client-assets":"^1.1.0"
+    "jquery-1x":"^1.12.1"
   },
   "jest": {
     "verbose": true,
@@ -36,7 +35,7 @@
     ]
   },
   "license": "AGPL-3.0",
-  "description": "Enigma is a Jeopardy-like study and quiz widget for use in Materia.",
+  "description": "Crossword is a quiz tool that uses words and clues to randomly generate a crossword puzzle.",
   "author": "University of Central Florida, Center for Distributed Learning"
 
 }
