--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "main": "app.js",
   "dependencies": {
     "fs": "0.0.2",
+    "markdown-loader": "^5.0.0",
     "run-sequence": "^1.1.5",
     "yargs": "^4.5.0"
   },
   "devDependencies": {
-    "materia-widget-development-kit": "^1.1.0",
     "angular": "~1.5.0",
     "angular-animate": "~1.5.0",
     "angular-loader": "~1.5.0",
@@ -20,7 +20,6 @@
     "angular-route": "~1.5.0",
     "angular-sanitize": "~1.5.0",
     "babel-loader": "^7.1.4",
-    "webpack-strip-block":"^0.2.0",
     "http-server": "^0.9.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
@@ -31,7 +30,9 @@
     "karma-junit-reporter": "^0.4.1",
     "karma-mocha-reporter": "^2.1.0",
     "karma-phantomjs-launcher": "^1.0.2",
-    "protractor": "^3.2.2"
+    "materia-widget-development-kit": "^2.3.0",
+    "protractor": "^3.2.2",
+    "webpack-strip-block": "^0.2.0"
   },
   "scripts": {
     "start": "webpack-dev-server",
@@ -44,4 +45,3 @@
   },
   "author": "New Media"
 }
-
