--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "version": "1.2.3",
   "dependencies": {
     "hammerjs": "2.0.6",
+    "html-webpack-plugin": "^3.2.0",
     "materia-widget-development-kit": "^2.3.0",
-    "markdown-loader": "^5.0.0"
+    "meta-marked": "^0.4.2"
   },
   "scripts": {
     "start": "webpack-dev-server",
