--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "hammerjs": "2.0.6",
     "html-webpack-plugin": "^3.2.0",
-    "materia-widget-development-kit": "^2.3.0",
+    "materia-widget-development-kit": "2.4.2",
     "meta-marked": "^0.4.2"
   },
   "scripts": {
