--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "version": "1.3.1",
   "dependencies": {
     "hammerjs": "2.0.6",
-    "materia-widget-development-kit": "2.4.2"
+    "materia-widget-development-kit": "2.4.2",
+    "node": "^12.22.11"
   },
   "scripts": {
     "start": "webpack-dev-server",
