--- a/src/install.yaml
+++ b/src/install.yaml
@@ -32,3 +32,9 @@ meta_data:
   excerpt: >
     A quiz tool that uses words and clues to
     randomly generate a crossword puzzle.
+
+  accessibility_keyboard: Full # values can be Full | Limited | None
+  accessibility_reader: Full
+  accessibility_description: >
+    Includes custom controls that may override standard navigation.
+    These controls are communicated visually and to screenreaders.
