Updates webpack config and package.json

--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "version": "1.3.2",
   "dependencies": {
     "hammerjs": "2.0.6",
-    "materia-widget-development-kit": "2.5.2"
+    "materia-widget-development-kit": "../../MWDK4"
   },
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack -p",
-    "build-dev": "webpack",
+    "start": "mwdk-start",
+    "build": "mwdk-build-prod",
+    "build-dev": "mwdk-build-dev",
     "test": "TZ='America/New_York' jest --verbose",
     "test-ci": "TZ='America/New_York' CI=true jest --ci --useStderr --coverage --coverageReporters text-summary cobertura"
   },
