--- a/src/install.yaml
+++ b/src/install.yaml
@@ -10,6 +10,7 @@ general:
   is_qset_encrypted: Yes
   is_answer_encrypted: Yes
   is_storage_enabled: No
+  is_generable: Yes
   api_version: 2
 files:
   creator: creator.html
